feat: 포인트 적립, 사용 통합 및 컨트롤러에 DTO 적용 #3