@@ -1,66 +1,56 @@
 package com.hanaro.userservice.service;
 
-import java.math.BigDecimal;
-import java.util.List;
-
-import com.hanaro.userservice.domain.Account;
-import com.hanaro.userservice.domain.PointType;
+import com.hanaro.userservice.domain.*;
+import com.hanaro.userservice.dto.*;
+import com.hanaro.userservice.mapper.UserMapper;
+import com.hanaro.userservice.repository.PointRepository;
+import com.hanaro.userservice.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import com.hanaro.userservice.domain.Point;
-import com.hanaro.userservice.domain.User;
-import com.hanaro.userservice.dto.UserHomeResponse;
-import com.hanaro.userservice.dto.UserGivingResponse;
-import com.hanaro.userservice.dto.UserSimpleResponse;
-import com.hanaro.userservice.repository.PointRepository;
-import com.hanaro.userservice.repository.UserRepository;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
-	private final UserRepository userRepository;
-	private final PointRepository pointRepository;
+    private final UserRepository userRepository;
+    private final PointRepository pointRepository;
+    private final UserMapper userMapper;
 
-	public UserHomeResponse getHomeInfo(Long userId) {
-		User user = userRepository.findById(userId)
-				.orElseThrow(() -> new RuntimeException("User not found"));
-		int totalPoint = user.getPoints().stream().mapToInt(Point::getAmount).sum();
-		return new UserHomeResponse(user.getName(), totalPoint, user.getOrgId(), user.getDonationRate());
-	}
+    public UserHomeResponseDTO getHomeInfo(Long userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        return userMapper.toUserHomeResponseDTO(user);
+    }
 
-	public UserGivingResponse getGivingInfo(Long userId) {
-		User user = userRepository.findById(userId)
-				.orElseThrow(() -> new RuntimeException("User not found"));
-		BigDecimal totalPoint = BigDecimal.valueOf(user.getPoints().stream().mapToInt(Point::getAmount).sum());
-		
-		Account account = user.getDefaultAccount();
-		String accountNum = (account != null) ? account.getAccountNumber() : "계좌 없음";
-		Long accountId = (account != null) ? account.getAccountId() : null;
-		
-		return new UserGivingResponse(user.getName(), totalPoint, accountNum, user.getOrgId(), accountId, user.getDonationRate());
-	}
+    public UserGivingResponseDTO getGivingInfo(Long userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        return userMapper.toUserGivingResponseDTO(user);
+    }
 
-	public List<UserSimpleResponse> getUserList(List<Long> ids) {
-		return userRepository.findAllById(ids).stream()
-				.map(u -> new UserSimpleResponse(u.getUserId(), u.getName(), u.getImageType()))
-				.toList();
-	}
+    public List<UserSimpleResponseDTO> getUserList(List<Long> ids) {
+        return userRepository.findAllById(ids).stream()
+                .map(userMapper::toUserSimpleResponseDTO)
+                .collect(Collectors.toList());
+    }
 
-	/** 포인트 사용 (차감) 로직 */
-	@Transactional
-	public void usePoints(Long userId, int amount, Long refId) {
-		User user = userRepository.findById(userId)
-				.orElseThrow(() -> new RuntimeException("User not found"));
-		
-		Point point = Point.builder()
-				.user(user)
-				.amount(-amount) // 차감은 음수로 저장
-				.pointType(PointType.OFFERING_ONCE) // 헌금 시 포인트 사용 타입 (Enum 확인 필요)
-				.refId(refId)
-				.build();
-		
-		pointRepository.save(point);
-	}
+    @Transactional
+    public void processPoints(Long userId, int amount, Long refId, PointType pointType, boolean isEarn, Double donationRate) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        int finalAmount = isEarn 
+                ? (int) (amount * donationRate) // 줄 때, 받을 때 전부 0.01 처럼 소수로 받음
+                : amount;
+
+        Point point = Point.builder()
+                .user(user)
+                .amount(isEarn ? finalAmount : -finalAmount)
+                .pointType(pointType)
+                .refId(refId)
+                .build();
+        pointRepository.save(point);
+    }
 }
